message EnableDataloggerUplinkPayload {
  required bool datalogger_enabled = 1 [default = true];
}